atlasian/jira/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira
  namespace: jira
spec:
  ingressClassName: nginx
  rules:
  - host: jira.mahmuzar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jira
            port:
              number: 80
